[metadata]
name = date-converter
version = 0.1.1
license_file = LICENSE
author = Arnaud van Haaster
author_email = dont@me.dude
description = Convert and parse dates between strings, timestamps, and datetime.date
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/ahaaster/date-converter
project_urls = 
    Bug Tracker = https://github.com/ahaaster/date-converter/issues
classifiers = 
    Programming Language :: Python :: 3.10
    License :: OSI Approved :: GNU General Public License v3 (GPLv3)
    Development Status :: 4 - Beta
    Natural Language :: English
    Topic :: Software Development :: Libraries :: Python Modules

[options]
py_modules = date_converter
packages = find:
python_requires = >=3.10

[options.packages.find]
include = date_converter